@@ -2,5 +2,3 @@ require 'core_ext/date'
 require 'core_ext/datetime'
 require 'core_ext/time'
 require 'core_ext/time_with_zone'
-
-Rails.logger.info '** [localized_dates] localized_dates plugin loaded.'
